--- a/src/HvA.API.NetStandard1/HvA.API.NetStandard1.csproj
+++ b/src/HvA.API.NetStandard1/HvA.API.NetStandard1.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{CC6E7FE2-1165-4A38-9034-A74F6F02C726}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HvA.API</RootNamespace>
-    <AssemblyName>HvA.API</AssemblyName>
+    <RootNamespace>HvA.API.NetStandard1</RootNamespace>
+    <AssemblyName>HvA.API.NetStandard1</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -60,6 +60,11 @@
     <Compile Include="Util\DateTimeHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties project_1json__JSONSchema="http://json.schemastore.org/project" />
+    </VisualStudio>
+  </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
