--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,8 +16,14 @@ before_build:
   - appveyor-retry dotnet restore -v Minimal
 
 build_script:
-  - dotnet build "src\HvA.API" -c %CONFIGURATION% --no-dependencies
+  - dotnet build "src\HvA.API.NetStandard1" -c %CONFIGURATION% --no-dependencies
   - dotnet build "src\HvA.API.Demo" -c %CONFIGURATION% --no-dependencies
+  
+after_build:
+  - dotnet pack "src\HvA.API.NetStandard1" -c %CONFIGURATION% --no-build -o artifacts
+  
+artifacts:
+  - path: artifacts\**\*.*
 
 cache:
   - '%USERPROFILE%\.nuget\packages'
